[gd_scene format=4 uid="uid://p3q20sth74o"]

[ext_resource type="Material" uid="uid://cdfxk1fj3i6od" path="res://Scenes/Dev/TextWorldTextures/groundMat.tres" id="1_hynmq"]
[ext_resource type="Script" uid="uid://q8ils4vs3q23" path="res://assets/bunker/GenScenes/wallScript.gd" id="1_ljn1m"]
[ext_resource type="Material" uid="uid://laf40tm5fn2w" path="res://assets/bunker/materials/wall1.tres" id="2_h0eje"]
[ext_resource type="Material" uid="uid://bvselmwyagjte" path="res://assets/bunker/materials/wall2.tres" id="3_mfk22"]
[ext_resource type="Material" uid="uid://bkv7n5jx5m3fa" path="res://assets/bunker/materials/glow.tres" id="4_mfk22"]
[ext_resource type="PhysicsMaterial" uid="uid://c67imlik5lpso" path="res://assets/groundPhysicsMaterial.tres" id="5_vwoi2"]

[sub_resource type="ArrayMesh" id="ArrayMesh_mfk22"]
_surfaces = [{
"aabb": AABB(-5.0000076, -10, -9.999992, 8, 39, 20),
"format": 34359742465,
"index_count": 48,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAABAAMABAADAAUABgAHAAgABgAJAAcACgAGAAgACQALAAcACgAIAAwADAANAAoADAAOAA0ACQAPAAsADwAQAAsADwARABAAEQASABAAEQATABIA"),
"name": "wallMat1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("IABAwP//50H4/x/BEACAwP//30EIACBBIABAwP//50EIACBBEACAwP//30H4/x/BEACgwP//30EIACBBEACgwP//30H4/x/B4P8/QP//H0H0/x/B4P8/QP7/X0EIACBB4P8/QP//H0EIACBB4P8/QP7/X0H0/x/BgP9/P///H0H0/x/BIABAwP//z0EIACBBgP9/P///H0EIACBBgP9/PwAAIMH0/x/BgP9/PwAAIMEIACBBIABAwP//z0H4/x/BIABAwP//10EIACBBIABAwP//10H4/x/BIAAAwP//30EIACBBIAAAwP//30H4/x/B")
}, {
"aabb": AABB(-8.000008, -10, -9.999992, 13, 42, 20),
"format": 34359742465,
"index_count": 588,
"index_data": PackedByteArray("AAABAAIAAQADAAIAAQAEAAMABQAEAAEABQAGAAQAAAAHAAEABwAFAAEACAAHAAAABwAJAAUACAAKAAcACgAJAAcACwAKAAgACgAMAAkACwANAAoADQAMAAoADQAOAAwADwAQABEAEAASABMAEAATABEAEQATABQAEQAUABUAFgARABUAFgAPABEADwAXABAAGAAPABYAGQAXAA8AGAAZAA8AGgAZABgAGQAbABcAGgAcABkAHAAbABkAHAAdABsAHgAfACAAIQAgAB8AHgAiAB8AIQAjACAAIgAeACQAJQAjACEAIgAkACUAJQAkACMAJgAnACgAKQAoACcAJgAqACcAKQArACgAKgAmACwALQArACkAKgAsAC0ALQAsACsALgAvADAAMQAwAC8ALgAyAC8AMQAzADAAMgAuADQANQAzADEAMgA0ADUANQA0ADMANgA3ADgAOQA4ADcANgA6ADcAOQA7ADgAOgA2ADwAPQA7ADkAOgA8AD0APQA8ADsAPgA/AEAAQQBAAD8APgBCAD8AQQBDAEAAQgA+AEQARQBDAEEAQgBEAEUARQBEAEMARgBHAEgASQBIAEcARgBKAEcASQBLAEgASgBGAEwATQBLAEkASgBMAE0ATQBMAEsATgBPAFAAUQBQAE8ATgBSAE8AUQBTAFAAUgBOAFQAVQBTAFEAUgBUAFUAVQBUAFMAVgBXAFgAWQBYAFcAVgBaAFcAWQBbAFgAWgBWAFwAXQBbAFkAWgBcAF0AXQBcAFsAXgBfAGAAYQBgAF8AXgBiAF8AYQBjAGAAYgBeAGQAZQBjAGEAYgBkAGUAZQBkAGMAZgBnAGgAaQBoAGcAZgBqAGcAaQBrAGgAagBmAGwAbQBrAGkAagBsAG0AbQBsAGsAbgBvAHAAcQBwAG8AbgByAG8AcQBzAHAAcgBuAHQAdQBzAHEAcgB0AHUAdQB0AHMAdgB3AHgAdgB4AHkAdgB5AHoAeAB7AHkAfAB2AHoAfAB6AH0AfAB9AHsAfAB+AHYAdgB+AHcAfAB7AH8AeAB/AHsAfACAAH4AfwCAAHwAeACBAH8AeAB3AIEAfwCBAIAAggB3AH4AggB+AIMAgwB+AIAAhAB3AIIAhACBAHcAgwCAAIUAhgCFAIAAhwCAAIEAhgCAAIcAhACIAIEAhwCBAIgAhACJAIgAigCIAIkAhgCHAIsAhgCLAIwAjQCMAIsAigCOAIgAiACPAIcAigCQAI4AigCRAJAAkgCQAJEAkwCHAI8AkwCLAIcAkwCPAJQAjwCVAJQAkwCUAJYAjwCXAJUAiACXAI8AlwCIAI4AlwCYAJUAmQCTAJYAmQCWAJgAlwCZAJgAlwCOAJkAiwCTAJkAiwCZAI4AjgCaAIsAjgCQAJoAjQCLAJoAjQCaAJsAjQCbAJwAnACbAJ0AnACdAJIAkgCdAJAAngCdAJsAnwCbAJoAngCbAJ8AoACaAJAAnwCaAKAAoQCQAJ0AoQCdAJ4AoACQAKEAngCfAKIAnwCjAKIAnwCgAKMAngCiAKQAoQCeAKQApQCjAKAAoQCkAKUApQCgAKEA"),
"lods": [9.300764, PackedByteArray("AAABAAIAAQADAAIAAQAEAAMABQAEAAEABQAGAAQAAAAHAAEABwAFAAEACAAHAAAABwAJAAUACAAKAAcACgAJAAcACwAKAAgACgAMAAkACwANAAoADQAMAAoADQAOAAwADwAQABEAEAASABMAEAATABEAEQATABQAEQAUABUAFgARABUAFgAPABEADwAXABAAGAAPABYAGQAXAA8AGAAZAA8AGgAZABgAGQAbABcAGgAcABkAHAAbABkAHAAdABsA")],
"name": "wallMat2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 166,
"vertex_data": PackedByteArray("8P+fQP7/f0H0/w/BEACgwP//v0H4/w/B8P+fQP//v0H0/w/B8P+fQP///0H0/w/BEACgwP///0H4/w/BEACgwP//v0H4/x/BEACgwP///0H4/x/BQACAv/7/f0H4/w/B8P+fQAAAgED0/w/BQACAv/7/f0H4/x/BQACAvwAAgED4/w/B8P+fQAAAIMH0/w/BQACAvwAAgED4/x/BCAAAwQAAIMH4/w/BCAAAwQAAIMH4/x/BQACAv/7/f0EIABBB8P+fQP//v0EIABBBEACgwP//v0EIABBB8P+fQP///0EIABBBEACgwP///0EIABBBEACgwP///0EIACBBEACgwP//v0EIACBBQACAv/7/f0EIACBB8P+fQP7/f0EIABBBQACAvwAAgEAIACBBQACAvwAAgEAIABBBCAAAwQAAIMEIACBB8P+fQAAAgEAIABBBCAAAwQAAIMEIABBB8P+fQAAAIMEIABBBBACAP2ZmNkEzMxNBBACAP5mZOUEzMxPBBACAP5mZOUEzMxNBnJmZP5mZOUEzMxPBBACAP2ZmNkEzMxPBnJmZP5mZOUEzMxNBnJmZP2ZmNkEzMxNBnJmZP2ZmNkEzMxPBYI+CP2ZmHkGkcP1AYI+CPwAAOEGuRwFBYI+CP2ZmHkGuRwFBQAqXPwAAOEGuRwFBYI+CPwAAOEGkcP1AQAqXP2ZmHkGuRwFBQAqXP2ZmHkGkcP1AQAqXPwAAOEGkcP1AYI+CP2ZmHkGkcL1AYI+CPwAAOEFcj8JAYI+CP2ZmHkFcj8JAQAqXPwAAOEFcj8JAYI+CPwAAOEGkcL1AQAqXP2ZmHkFcj8JAQAqXP2ZmHkGkcL1AQAqXPwAAOEGkcL1AYI+CP2ZmHkFI4XpAYI+CPwAAOEFcj4JAYI+CP2ZmHkFcj4JAQAqXPwAAOEFcj4JAYI+CPwAAOEFI4XpAQAqXP2ZmHkFcj4JAQAqXP2ZmHkFI4XpAQAqXPwAAOEFI4XpAYI+CP2ZmHkGQwvU/YI+CPwAAOEG4HgVAYI+CP2ZmHkG4HgVAQAqXPwAAOEG4HgVAYI+CPwAAOEGQwvU/QAqXP2ZmHkG4HgVAQAqXP2ZmHkGQwvU/QAqXPwAAOEGQwvU/YI+CP2ZmHkEA16O9YI+CPwAAOEEA16M9YI+CP2ZmHkEA16M9QAqXPwAAOEEA16M9YI+CPwAAOEEA16O9QAqXP2ZmHkEA16M9QAqXP2ZmHkEA16O9QAqXPwAAOEEA16O9YI+CP2ZmHkG4HgXAYI+CPwAAOEGQwvW/YI+CP2ZmHkGQwvW/QAqXPwAAOEGQwvW/YI+CPwAAOEG4HgXAQAqXP2ZmHkGQwvW/QAqXP2ZmHkG4HgXAQAqXPwAAOEG4HgXAYI+CP2ZmHkFcj4LAYI+CPwAAOEFI4XrAYI+CP2ZmHkFI4XrAQAqXPwAAOEFI4XrAYI+CPwAAOEFcj4LAQAqXP2ZmHkFI4XrAQAqXP2ZmHkFcj4LAQAqXPwAAOEFcj4LAYI+CP2ZmHkFcj8LAYI+CPwAAOEGkcL3AYI+CP2ZmHkGkcL3AQAqXPwAAOEGkcL3AYI+CPwAAOEFcj8LAQAqXP2ZmHkGkcL3AQAqXP2ZmHkFcj8LAQAqXPwAAOEFcj8LAYI+CP2ZmHkGuRwHBYI+CPwAAOEGkcP3AYI+CP2ZmHkGkcP3AQAqXPwAAOEGkcP3AYI+CPwAAOEGuRwHBQAqXP2ZmHkGkcP3AQAqXP2ZmHkGuRwHBQAqXPwAAOEGuRwHBBACAP5mZKUEzMxNBBACAP8zMLEEzMxPBBACAP8zMLEEzMxNBnJmZP8zMLEEzMxPBBACAP5mZKUEzMxPBnJmZP8zMLEEzMxNBnJmZP5mZKUEzMxNBnJmZP5mZKUEzMxPBVTY5wCQF5kEIAAxB9dYPwMYm30FuZg5B9dYPwDjZ4EEIAAxBIQAAwBPU4kEIAAxBgl8pwP//50EIAAxBIgAAwBPU4kEgAFBAVTY5wCQF5kEgAFBAgl8pwP//50EgAFBA58lGwCQF5kFuZg5B9dYPwDjZ4EEgAFBA58lGwCQF5kGGZkZA9tYPwMYm30GGZkZAHgAAwOsr3UEIABRBvqBWwP//50EIABRBHgAAwOsr3UGGZkZAvqBWwP//50GGZkZAvqBWwP//50G6mTlA5slGwCQF5kG6mTlA9dYPwMYm30G6mTlAHgAAwOsr3UG6mTlAHgAAwOsr3UFwmTnA58lGwCQF5kFwmTnAvqBWwP//50FwmTnAvqBWwP//50E8ZkbA9tYPwMYm30FwmTnAVTY5wCQF5kEgADBA9dYPwMYm30E8ZkbAHgAAwOsr3UE8ZkbAHgAAwOsr3UH4/xPBVTY5wCQF5kHW/y/Agl8pwP//50EgADBAIgAAwBPU4kEgADBAgl8pwP//50HW/y/A9dYPwDjZ4EEgADBAIgAAwBPU4kHW/y/A9dYPwDjZ4EHW/y/A5slGwCQF5kE8ZkbA58lGwCQF5kFeZg7BvqBWwP//50H4/xPB9dYPwMYm30FeZg7B9dYPwDjZ4EH4/wvBVTY5wCQF5kH4/wvBVTY5wCQF5kHW/0/A9dYPwDjZ4EHW/0/Agl8pwP//50H4/wvBgl8pwP//50HW/0/AIQAAwBPU4kH4/wvBIgAAwBPU4kHW/0/A")
}, {
"aabb": AABB(-3.0000076, 27.999998, -9.999992, 1, 1, 20),
"format": 34359742465,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"name": "lightGlow",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("IAAAwP//30H4/x/BIABAwP//50EIACBBIAAAwP//30EIACBBIABAwP//50H4/x/B")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_12mgn"]
resource_name = "wall_Cube_024"
_surfaces = [{
"aabb": AABB(-5.0000076, -10, -9.999992, 8, 39, 20),
"attribute_data": PackedByteArray("AAAAAAAAAAAAAMA+AAAAPwAAgD8AAAAAAADAPgAAgD4AAIA+AAAAPwAAwD4AAIA+AACAPgAAgD4AAMA+AAAAPwAAAAAAAIA/AACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPw=="),
"format": 34359742487,
"index_count": 48,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0A"),
"material": ExtResource("2_h0eje"),
"name": "wallMat1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("IABAwP//50H4/x/BEACAwP//30EIACBBIABAwP//50EIACBBEACAwP//30H4/x/BEACgwP//30EIACBBEACAwP//30H4/x/BEACgwP//30H4/x/BEACAwP//30EIACBB4P8/QP//H0H0/x/B4P8/QP7/X0EIACBB4P8/QP//H0EIACBB4P8/QP7/X0H0/x/B4P8/QP7/X0H0/x/BIABAwP//z0EIACBB4P8/QP7/X0EIACBBIABAwP//z0H4/x/BIABAwP//10H4/x/BIAAAwP//30EIACBBIABAwP//10EIACBBIAAAwP//30H4/x/BIABAwP//z0H4/x/BIABAwP//10EIACBBIABAwP//z0EIACBBIABAwP//10H4/x/BgP9/P///H0H0/x/B4P8/QP//H0EIACBBgP9/P///H0EIACBB4P8/QP//H0H0/x/BgP9/P///H0EIACBBgP9/PwAAIMH0/x/BgP9/P///H0H0/x/BgP9/PwAAIMEIACBB/7//P9EF6IL/v/8/0QXogv+//z//f/8//7//P9EF6IL/fwAA////P/9/AAD///8//38AAP///z//fwAA////PwAA/3//f/+/AAD/f/9//78AAP9//3//vwAA/3//f/+/qipUVf///7+qKlRV////v6oqVFX///+/qipUVf///7//P/+/////v/8//7////+//z//v////7//P/+/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//3///////7//f///////v/9///////+//3///////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vw==")
}, {
"aabb": AABB(-8.000008, -10, -9.999992, 13, 42, 20),
"attribute_data": PackedByteArray("AAAAPwAAAD8AACA/AACAPgAAID8AAAA/AAAgPwAAAD8AACA/AACAPgAAAD8AAIA+AADgPgAAAD8AAOA+AACAPgAAwD4AAAA/AADAPgAAgD4AAAA/AACAPwAAID8AAEA/AAAgPwAAgD8AACA/AACAPwAAID8AAEA/AAAAPwAAQD8AAOA+AACAPwAA4D4AAEA/AADAPgAAgD8AAMA+AABAPwAAAD8AAAA+AAAgPwAAAAAAACA/AAAAPgAAAD8AAAAAAAAAPwAAgD4AACA/AAAAPgAAID8AAIA+AAAAPwAAAD4AAOA+AAAAPgAAAD8AAAAAAAAAPwAAAD4AAOA+AAAAAAAA4D4AAIA+AAAAPwAAAD4AAAA/AACAPgAA4D4AAAA+AAAgPwAAAD4AACA/AACAPgAAID8AAIA+AAAgPwAAAD4AACA/AAAAAAAAID8AAAA+AAAgPwAAAD4AACA/AAAAAAAAwD4AAAA+AADgPgAAAAAAAOA+AAAAPgAAwD4AAAAAAADAPgAAgD4AAOA+AAAAPgAA4D4AAIA+AADAPgAAAD4AAMA+AACAPwAAID8AAEA/AAAgPwAAgD8AAMA+AABAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AACA/AAAAPwAAYD8AAIA+AABgPwAAAD8AACA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AADAPgAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAAD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAAD4AAIA+AAAgPwAAAD8AAGA/AACAPgAAYD8AAAA/AAAgPwAAgD4AAMA+AACAPwAAID8AAEA/AAAgPwAAgD8AAMA+AABAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AACA/AAAAPwAAYD8AAIA+AABgPwAAAD8AACA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AADAPgAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAAD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAAD4AAIA+AAAgPwAAAD8AAGA/AACAPgAAYD8AAAA/AAAgPwAAgD4AAMA+AACAPwAAID8AAEA/AAAgPwAAgD8AAMA+AABAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AACA/AAAAPwAAYD8AAIA+AABgPwAAAD8AACA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AADAPgAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAAD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAAD4AAIA+AAAgPwAAAD8AAGA/AACAPgAAYD8AAAA/AAAgPwAAgD4AAMA+AACAPwAAID8AAEA/AAAgPwAAgD8AAMA+AABAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AACA/AAAAPwAAYD8AAIA+AABgPwAAAD8AACA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AADAPgAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADdEKT8AAAAAchwnPwAAAAA3RCk/AAAAAHIcJz8AAAAAknetPgAAAAAdx7E+AAAAAJJ3rT4AAAAAHcexPgAAAAASP6M+AAAAABGnpz4AAAAAEz+jPgAAAAARp6c+AAAAAHdgLj8AAAAAeCwsPwAAAAB3YC4/AAAAAHcsLD8AAAAAAAAAAAAAAAARp6c+AAAAABI/oz4AAAAAAAAAAAAAAAB3YC4/AAAAAAAAgD8AAAAAAACAPwAAAAB4LCw/AAAAAB3HsT4AAAAAN0QpPwAAAAByHCc/AAAAAJJ3rT4AAAAAchwnPwAAAACSd60+AAAAAB3HsT4AAAAAN0QpPwAAAAATP6M+AAAAAAAAAAAAAAAAAAAAAAAAAAARp6c+AAAAAAAAgD8AAAAAdywsPwAAAAB3YC4/AAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL16M+AAAAABGnpz4AAAAAC9ejPgAAAAARp6c+AAAAAB3HsT4AAAAAknetPgAAAACSd60+AAAAADdEKT8AAAAAHcexPgAAAAByHCc/AAAAAHIcJz8AAAAAexQuPwAAAAA3RCk/AAAAAHcsLD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAB4LCw/AAAAAHsULj8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATP6M+AAAAAAAAAAAAAAAAEz+jPgAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAB3YC4/AAAAAAAAgD8AAAAAd2AuPwAAAAAAAAAAAAAAABI/oz4AAAAAAAAAAAAAAAASP6M+AAAAAHdgLj8AAAAAAACAPwAAAAB3YC4/AAAAAAAAgD8AAAAAHcexPgAAAAByHCc/AAAAAB3HsT4AAAAAchwnPwAAAAAdx7E+AAAAAB3HsT4AAAAAHcexPgAAAAAdx7E+AAAAABM/oz4AAAAAEj+jPgAAAAATP6M+AAAAABI/oz4AAAAAd2AuPwAAAAB3YC4/AAAAAHdgLj8AAAAAd2AuPwAAAAByHCc/AAAAAHIcJz8AAAAAchwnPwAAAAByHCc/AAAAAHIcJz8AAAAAHcexPgAAAAByHCc/AAAAAB3HsT4AAAAA"),
"format": 34359742487,
"index_count": 588,
"index_data": PackedByteArray("AAABAAIAAQADAAIAAQAEAAMAAAAFAAEABgAFAAAABgAHAAUACAAHAAYACAAJAAcACgALAAwACwANAAwACwAOAA0ACgAPAAsAEAAPAAoAEAARAA8AEgARABAAEgATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUAWABZAFoAWABbAFkAXABdAF4AXABfAF0AYABhAGIAYABjAGEAZABlAGYAZABnAGUAaABpAGoAaABrAGkAbABtAG4AbABvAG0AcABxAHIAcABzAHEAdAB1AHYAdAB3AHUAeAB5AHoAeAB7AHkAfAB9AH4AfAB/AH0AgACBAIIAgACDAIEAhACFAIYAhACHAIUAiACJAIoAiACLAIkAjACNAI4AjACPAI0AkACRAJIAkACTAJEAlACVAJYAlACXAJUAmACZAJoAmACbAJkAnACdAJ4AnACfAJ0AoAChAKIAoACjAKEApAClAKYApACnAKUAqACpAKoAqACrAKkArACtAK4ArACvAK0AsACxALIAsACzALEAtAC1ALYAtAC3ALUAuAC5ALoAuAC7ALkAvAC9AL4AvAC/AL0AwADBAMIAwADDAMEAxADFAMYAxADHAMUAyADJAMoAyADLAMkAzADNAM4AzADPAM0A0ADRANIA0ADTANEA1ADVANYA1ADXANUA2ADZANoA2ADbANkA3ADdAN4A3ADfAN0A4ADhAOIA4ADjAOEA5ADlAOYA5ADnAOUA6ADpAOoA6ADrAOkA7ADtAO4A7ADvAO0A8ADxAPIA8ADzAPEA9AD1APYA9AD3APUA+AD5APoA+AD7APkA/AD9AP4A/AD/AP0AAAEBAQIBAAEDAQEBBAEFAQYBBAEHAQUBCAEJAQoBCAELAQkBDAENAQ4BDAEPAQ0BEAERARIBEAETAREBFAEVARYBFAEXARUBGAEXARQBFgEVARkBFgEZARoBGAEbARcBHAEaARkBHQEZARsBHAEZAR0BHQEbAR4BGAEeARsBHAEdAR8BGAEgAR4BHAEfASEBIgEeASABIwEhAR8BIgEkAR4BIwEfASUBJAElAR8BIwElASYBIwEmAScBJwEmASgBJwEoASkBKQEoASoBJAEqASUBIgEqASQBKQEqASsBIgErASoBLAEtAS4BLAEvAS0BMAExATIBMAEzATEBNAE1ATYBNAE3ATUBOAE5AToBOAE7ATkBPAE9AT4BPAE/AT0BQAFBAUIBQAFDAUEBRAFFAUYBRAFHAUUBSAFJAUoBSAFLAUkBTAFNAU4BTAFPAU0BUAFRAVIBUAFTAVEBVAFVAVYBVAFXAVUBWAFZAVoBWAFbAVkB"),
"lods": [9.300764, PackedByteArray("AAABAAIAAQADAAIAAQAEAAMAAAAFAAEABgAFAAAABgAHAAUACAAHAAYACAAJAAcACgALAAwACwANAAwACwAOAA0ACgAPAAsAEAAPAAoAEAARAA8AEgARABAAEgATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEA")],
"material": ExtResource("3_mfk22"),
"name": "wallMat2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 348,
"vertex_data": PackedByteArray("8P+fQP7/f0H0/w/BEACgwP//v0H4/w/B8P+fQP//v0H0/w/B8P+fQP///0H0/w/BEACgwP///0H4/w/BQACAv/7/f0H4/w/B8P+fQAAAgED0/w/BQACAvwAAgED4/w/B8P+fQAAAIMH0/w/BCAAAwQAAIMH4/w/BQACAv/7/f0EIABBB8P+fQP//v0EIABBBEACgwP//v0EIABBBEACgwP///0EIABBB8P+fQP///0EIABBB8P+fQP7/f0EIABBBQACAvwAAgEAIABBB8P+fQAAAgEAIABBBCAAAwQAAIMEIABBB8P+fQAAAIMEIABBBQACAv/7/f0EIACBBEACgwP//v0EIABBBEACgwP//v0EIACBBQACAv/7/f0EIABBBQACAv/7/f0H4/w/BEACgwP//v0H4/x/BEACgwP//v0H4/w/BQACAv/7/f0H4/x/BQACAvwAAgEAIACBBQACAv/7/f0EIABBBQACAv/7/f0EIACBBQACAvwAAgEAIABBBQACAvwAAgED4/w/BQACAv/7/f0H4/x/BQACAv/7/f0H4/w/BQACAvwAAgED4/x/BEACgwP//v0H4/x/BEACgwP///0H4/w/BEACgwP//v0H4/w/BEACgwP///0H4/x/BEACgwP//v0EIABBBEACgwP///0EIACBBEACgwP//v0EIACBBEACgwP///0EIABBBCAAAwQAAIMEIACBBQACAvwAAgEAIABBBQACAvwAAgEAIACBBCAAAwQAAIMEIABBBCAAAwQAAIMH4/w/BQACAvwAAgED4/x/BQACAvwAAgED4/w/BCAAAwQAAIMH4/x/BBACAP2ZmNkEzMxNBBACAP5mZOUEzMxPBBACAP5mZOUEzMxNBBACAP2ZmNkEzMxPBnJmZP2ZmNkEzMxPBnJmZP5mZOUEzMxNBnJmZP5mZOUEzMxPBnJmZP2ZmNkEzMxNBBACAP2ZmNkEzMxPBnJmZP2ZmNkEzMxNBnJmZP2ZmNkEzMxPBBACAP2ZmNkEzMxNBnJmZP5mZOUEzMxPBBACAP5mZOUEzMxNBBACAP5mZOUEzMxPBnJmZP5mZOUEzMxNBYI+CP2ZmHkGkcP1AYI+CPwAAOEGuRwFBYI+CP2ZmHkGuRwFBYI+CPwAAOEGkcP1AQAqXPwAAOEGkcP1AQAqXP2ZmHkGuRwFBQAqXPwAAOEGuRwFBQAqXP2ZmHkGkcP1AYI+CPwAAOEGkcP1AQAqXP2ZmHkGkcP1AQAqXPwAAOEGkcP1AYI+CP2ZmHkGkcP1AQAqXPwAAOEGuRwFBYI+CP2ZmHkGuRwFBYI+CPwAAOEGuRwFBQAqXP2ZmHkGuRwFBYI+CP2ZmHkGkcL1AYI+CPwAAOEFcj8JAYI+CP2ZmHkFcj8JAYI+CPwAAOEGkcL1AQAqXPwAAOEGkcL1AQAqXP2ZmHkFcj8JAQAqXPwAAOEFcj8JAQAqXP2ZmHkGkcL1AYI+CPwAAOEGkcL1AQAqXP2ZmHkGkcL1AQAqXPwAAOEGkcL1AYI+CP2ZmHkGkcL1AQAqXPwAAOEFcj8JAYI+CP2ZmHkFcj8JAYI+CPwAAOEFcj8JAQAqXP2ZmHkFcj8JAYI+CP2ZmHkFI4XpAYI+CPwAAOEFcj4JAYI+CP2ZmHkFcj4JAYI+CPwAAOEFI4XpAQAqXPwAAOEFI4XpAQAqXP2ZmHkFcj4JAQAqXPwAAOEFcj4JAQAqXP2ZmHkFI4XpAYI+CPwAAOEFI4XpAQAqXP2ZmHkFI4XpAQAqXPwAAOEFI4XpAYI+CP2ZmHkFI4XpAQAqXPwAAOEFcj4JAYI+CP2ZmHkFcj4JAYI+CPwAAOEFcj4JAQAqXP2ZmHkFcj4JAYI+CP2ZmHkGQwvU/YI+CPwAAOEG4HgVAYI+CP2ZmHkG4HgVAYI+CPwAAOEGQwvU/QAqXPwAAOEGQwvU/QAqXP2ZmHkG4HgVAQAqXPwAAOEG4HgVAQAqXP2ZmHkGQwvU/YI+CPwAAOEGQwvU/QAqXP2ZmHkGQwvU/QAqXPwAAOEGQwvU/YI+CP2ZmHkGQwvU/QAqXPwAAOEG4HgVAYI+CP2ZmHkG4HgVAYI+CPwAAOEG4HgVAQAqXP2ZmHkG4HgVAYI+CP2ZmHkEA16O9YI+CPwAAOEEA16M9YI+CP2ZmHkEA16M9YI+CPwAAOEEA16O9QAqXPwAAOEEA16O9QAqXP2ZmHkEA16M9QAqXPwAAOEEA16M9QAqXP2ZmHkEA16O9YI+CPwAAOEEA16O9QAqXP2ZmHkEA16O9QAqXPwAAOEEA16O9YI+CP2ZmHkEA16O9QAqXPwAAOEEA16M9YI+CP2ZmHkEA16M9YI+CPwAAOEEA16M9QAqXP2ZmHkEA16M9YI+CP2ZmHkG4HgXAYI+CPwAAOEGQwvW/YI+CP2ZmHkGQwvW/YI+CPwAAOEG4HgXAQAqXPwAAOEG4HgXAQAqXP2ZmHkGQwvW/QAqXPwAAOEGQwvW/QAqXP2ZmHkG4HgXAYI+CPwAAOEG4HgXAQAqXP2ZmHkG4HgXAQAqXPwAAOEG4HgXAYI+CP2ZmHkG4HgXAQAqXPwAAOEGQwvW/YI+CP2ZmHkGQwvW/YI+CPwAAOEGQwvW/QAqXP2ZmHkGQwvW/YI+CP2ZmHkFcj4LAYI+CPwAAOEFI4XrAYI+CP2ZmHkFI4XrAYI+CPwAAOEFcj4LAQAqXPwAAOEFcj4LAQAqXP2ZmHkFI4XrAQAqXPwAAOEFI4XrAQAqXP2ZmHkFcj4LAYI+CPwAAOEFcj4LAQAqXP2ZmHkFcj4LAQAqXPwAAOEFcj4LAYI+CP2ZmHkFcj4LAQAqXPwAAOEFI4XrAYI+CP2ZmHkFI4XrAYI+CPwAAOEFI4XrAQAqXP2ZmHkFI4XrAYI+CP2ZmHkFcj8LAYI+CPwAAOEGkcL3AYI+CP2ZmHkGkcL3AYI+CPwAAOEFcj8LAQAqXPwAAOEFcj8LAQAqXP2ZmHkGkcL3AQAqXPwAAOEGkcL3AQAqXP2ZmHkFcj8LAYI+CPwAAOEFcj8LAQAqXP2ZmHkFcj8LAQAqXPwAAOEFcj8LAYI+CP2ZmHkFcj8LAQAqXPwAAOEGkcL3AYI+CP2ZmHkGkcL3AYI+CPwAAOEGkcL3AQAqXP2ZmHkGkcL3AYI+CP2ZmHkGuRwHBYI+CPwAAOEGkcP3AYI+CP2ZmHkGkcP3AYI+CPwAAOEGuRwHBQAqXPwAAOEGuRwHBQAqXP2ZmHkGkcP3AQAqXPwAAOEGkcP3AQAqXP2ZmHkGuRwHBYI+CPwAAOEGuRwHBQAqXP2ZmHkGuRwHBQAqXPwAAOEGuRwHBYI+CP2ZmHkGuRwHBQAqXPwAAOEGkcP3AYI+CP2ZmHkGkcP3AYI+CPwAAOEGkcP3AQAqXP2ZmHkGkcP3ABACAP5mZKUEzMxNBBACAP8zMLEEzMxPBBACAP8zMLEEzMxNBBACAP5mZKUEzMxPBnJmZP5mZKUEzMxPBnJmZP8zMLEEzMxNBnJmZP8zMLEEzMxPBnJmZP5mZKUEzMxNBBACAP5mZKUEzMxPBnJmZP5mZKUEzMxNBnJmZP5mZKUEzMxPBBACAP5mZKUEzMxNBnJmZP8zMLEEzMxPBBACAP8zMLEEzMxNBBACAP8zMLEEzMxPBnJmZP8zMLEEzMxNBVTY5wCQF5kEIAAxB9dYPwMYm30FuZg5B9dYPwDjZ4EEIAAxB58lGwCQF5kFuZg5B9dYPwDjZ4EH4/wvB58lGwCQF5kFeZg7BVTY5wCQF5kH4/wvB9dYPwMYm30FeZg7B9dYPwMYm30G6mTlAVTY5wCQF5kEgADBA5slGwCQF5kG6mTlA9dYPwDjZ4EEgADBA58lGwCQF5kFwmTnA9dYPwDjZ4EHW/y/A9tYPwMYm30FwmTnAVTY5wCQF5kHW/y/AVTY5wCQF5kHW/0/A9dYPwMYm30E8ZkbA9dYPwDjZ4EHW/0/A5slGwCQF5kE8ZkbA9dYPwDjZ4EEgAFBA58lGwCQF5kGGZkZAVTY5wCQF5kEgAFBA9tYPwMYm30GGZkZAVTY5wCQF5kH4/wvB5slGwCQF5kE8ZkbAVTY5wCQF5kHW/0/A58lGwCQF5kFeZg7BVTY5wCQF5kEgAFBA58lGwCQF5kFuZg5BVTY5wCQF5kEIAAxB58lGwCQF5kGGZkZAVTY5wCQF5kHW/y/A5slGwCQF5kG6mTlAVTY5wCQF5kEgADBA58lGwCQF5kFwmTnA9dYPwDjZ4EEgADBA9tYPwMYm30FwmTnA9dYPwDjZ4EHW/y/A9dYPwMYm30G6mTlA9dYPwDjZ4EHW/0/A9dYPwMYm30FeZg7B9dYPwDjZ4EH4/wvB9dYPwMYm30E8ZkbA9dYPwDjZ4EEIAAxB9tYPwMYm30GGZkZA9dYPwDjZ4EEgAFBA9dYPwMYm30FuZg5BvqBWwP//50H4/xPB9dYPwMYm30FeZg7BHgAAwOsr3UH4/xPB58lGwCQF5kFeZg7BvqBWwP//50E8ZkbA9dYPwMYm30E8ZkbAHgAAwOsr3UE8ZkbA5slGwCQF5kE8ZkbAHgAAwOsr3UFwmTnA9tYPwMYm30FwmTnA58lGwCQF5kFwmTnA9dYPwMYm30G6mTlAvqBWwP//50FwmTnAHgAAwOsr3UG6mTlAvqBWwP//50G6mTlAHgAAwOsr3UGGZkZA5slGwCQF5kG6mTlA9tYPwMYm30GGZkZA9dYPwMYm30FuZg5BHgAAwOsr3UEIABRB58lGwCQF5kFuZg5BvqBWwP//50EIABRB58lGwCQF5kGGZkZAvqBWwP//50GGZkZA9dYPwDjZ4EH4/wvBgl8pwP//50H4/wvBIQAAwBPU4kH4/wvBVTY5wCQF5kH4/wvB9dYPwDjZ4EHW/0/AIQAAwBPU4kH4/wvBIgAAwBPU4kHW/0/A9dYPwDjZ4EH4/wvBVTY5wCQF5kEIAAxBIQAAwBPU4kEIAAxBgl8pwP//50EIAAxB9dYPwDjZ4EEIAAxB9dYPwDjZ4EEIAAxBIgAAwBPU4kEgAFBAIQAAwBPU4kEIAAxB9dYPwDjZ4EEgAFBAVTY5wCQF5kH4/wvBgl8pwP//50HW/0/Agl8pwP//50H4/wvBVTY5wCQF5kHW/0/AVTY5wCQF5kEgAFBAgl8pwP//50EIAAxBgl8pwP//50EgAFBAVTY5wCQF5kEIAAxBVTY5wCQF5kHW/y/Agl8pwP//50EgADBAgl8pwP//50HW/y/AVTY5wCQF5kEgADBA9dYPwDjZ4EHW/y/Agl8pwP//50HW/y/AIgAAwBPU4kHW/y/AVTY5wCQF5kHW/y/AIgAAwBPU4kHW/0/AVTY5wCQF5kHW/0/A9dYPwDjZ4EHW/0/Agl8pwP//50HW/0/AVTY5wCQF5kEgAFBAIgAAwBPU4kEgAFBA9dYPwDjZ4EEgAFBAgl8pwP//50EgAFBAVTY5wCQF5kEgADBAIgAAwBPU4kEgADBAgl8pwP//50EgADBA9dYPwDjZ4EEgADBA9dYPwDjZ4EEgADBAIgAAwBPU4kHW/y/AIgAAwBPU4kEgADBA9dYPwDjZ4EHW/y/A/3//f4t0RPr/f/9/RWwi9v9//3//f////3//f////z//f/9/////P/9//3/qZHTy/3//f/9/////f/9/vYyg+f9//3/koQzv/3//f6qqqer/////FnAK+P/////gY+/x/////1RVqer/////////v/////////+///////9/////////FJt08v/////AjR75/////4eNOvn//////3///6oqVFVUVanqqipUVVRVqeqqKlRVVFWp6qoqVFVUVanqqipUVVRVqeqqKlRVVFWp6qoqVFVUVanqqipUVVRVqeoAAP9//3///wAA/3//f///AAD/f/9///8AAP9//3///wAA/3//f///AAD/f/9///8AAP9//3///wAA/3//f///AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v6oqqqqqqqnqqiqqqqqqqeqqKqqqqqqp6qoqqqqqqqnqqiqqqqqqqeqqKqqqqqqp6qoqqqqqqqnqqiqqqqqqqeoAAP9//3///wAA/3//f///AAD/f/9///8AAP9//3///////3//f///////f/9///////9//3///////3//f////38AAP///7//fwAA////v/9/AAD///+//38AAP///7//f///AAD/v/9///8AAP+//3///wAA/7//f///AAD/vwAA/3//f/+/AAD/f/9//78AAP9//3//vwAA/3//f/+/////f/9//7////9//3//v////3//f/+/////f/9//7//////////v/////////+//////////7//////////v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+/AAD/f/9//78AAP9//3//vwAA/3//f/+/AAD/f/9//7////9//3//v////3//f/+/////f/9//7////9//3//v/////////+//////////7//////////v/////////+//3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v////3//f/+/////f/9//7////9//3//v////3//f/+//////////7//////////v/////////+//////////7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/vwAA/3//f/+/AAD/f/9//78AAP9//3//vwAA/3//f/+/////f/9//7////9//3//v////3//f/+/////f/9//7//////////v/////////+//////////7//////////v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+/AAD/f/9//78AAP9//3//vwAA/3//f/+/AAD/f/9//7////9//3//v////3//f/+/////f/9//7////9//3//v/////////+//////////7//////////v/////////+//3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v////3//f/+/////f/9//7////9//3//v////3//f/+//////////7//////////v/////////+//////////7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/vwAA/3//f/+/AAD/f/9//78AAP9//3//vwAA/3//f/+/////f/9//7////9//3//v////3//f/+/////f/9//7//////////v/////////+//////////7//////////v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+/AAD/f/9//78AAP9//3//vwAA/3//f/+/AAD/f/9//7////9//3//v////3//f/+/////f/9//7////9//3//v/////////+//////////7//////////v/////////+//3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v////3//f/+/////f/9//7////9//3//v////3//f/+//////////7//////////v/////////+//////////7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/vwAA/3//f///AAD/f/9///8AAP9//3///wAA/3//f///////f/9///////9//3///////3//f///////f/9/////fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9///8AAP+//3///wAA/7//f///AAD/v/9///8AAP+/fSV9Jf///799JX0l////v30lfSX///+/fSV9Jf///7+CWoJa////P4Jaglr///8/glqCWv///z+CWoJa////P30lfSX///+/fSV9Jf///799JX0l////v30lfSX///+/glqCWv///z+CWoJa////P4Jaglr///8/glqCWv///z99JX0l////v30lfSX///+/fSV9Jf///799JX0l////v4Jaglr///8/glqCWv///z+CWoJa////P4Jaglr///8//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//z//P////7//P/8/////v/8//z////+//3//f////z//f/9/////P/9//3////8//3//f////z//P/+/////v/8//7////+//z//v////7//P/+/////v/////////+//////////7//////////v/////////+//z//v////7//P/+/////v/8//7////+//z//v////7//v/8/////v/+//z////+//7//P////7//v/8/////v/+//z////+//7//P////7//v/8/////v/+//z////+//7//P////7//v/8/////v/+//z////+//7//P////7//f/9/////P/9//3////8//3//f////z//f/9/////P/////////+//////////7//////////v/////////+//3//f////z//f/9/////P/9//3////8//3//f////z//////////v/////////+//////////7//////////v/8//7////+//z//v////7//P/+/////v/8//7////+/")
}, {
"aabb": AABB(-3.0000076, 27.999998, -9.999992, 1, 1, 20),
"attribute_data": PackedByteArray("AAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAAAAAAAAAAA="),
"format": 34359742487,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"material": ExtResource("4_mfk22"),
"name": "lightGlow",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("IAAAwP//30H4/x/BIABAwP//50EIACBBIAAAwP//30EIACBBIABAwP//50H4/x/B/z//P////7//P/8/////v/8//z////+//z//P////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_mfk22")

[sub_resource type="BoxShape3D" id="BoxShape3D_86wnb"]
size = Vector3(1, 27, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_vwoi2"]
size = Vector3(10, 27, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_cm71j"]
size = Vector3(10, 20, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hynmq"]
data = PackedVector3Array(5, 0, 10, -5, 0, 10, 5, 0, -10, -5, 0, 10, -5, 0, -10, 5, 0, -10)

[sub_resource type="PlaneMesh" id="PlaneMesh_mfk22"]
size = Vector2(10, 20)

[node name="wall" type="Node3D" unique_id=1934844524]
script = ExtResource("1_ljn1m")

[node name="wallMesh" type="MeshInstance3D" parent="." unique_id=1483219483]
mesh = SubResource("ArrayMesh_12mgn")
skeleton = NodePath("")

[node name="wallColliders" type="StaticBody3D" parent="." unique_id=1254482896]

[node name="mainWallCol" type="CollisionShape3D" parent="wallColliders" unique_id=1595988326]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4999923, 2.4999995, 9.488005e-06)
shape = SubResource("BoxShape3D_86wnb")

[node name="wallLSideCol" type="CollisionShape3D" parent="wallColliders" unique_id=702134407]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9999921, 2.4999986, -9.499992)
shape = SubResource("BoxShape3D_vwoi2")

[node name="wallRSideCol" type="CollisionShape3D" parent="wallColliders" unique_id=1065473357]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9999921, 2.4999986, 9.500008)
shape = SubResource("BoxShape3D_vwoi2")

[node name="wallLSideColAgl" type="CollisionShape3D" parent="wallColliders" unique_id=887451523]
transform = Transform3D(0.89485645, 0.44635403, 0, -0.44635403, 0.89485645, 0, 0, 0, 1, -0.0278711, -5.236069, -9.499991)
shape = SubResource("BoxShape3D_cm71j")

[node name="wallRSideColAgl" type="CollisionShape3D" parent="wallColliders" unique_id=132030109]
transform = Transform3D(0.89485645, 0.44635403, 0, -0.44635403, 0.89485645, 0, 0, 0, 1, -0.0278711, -5.236069, 9.500009)
shape = SubResource("BoxShape3D_cm71j")

[node name="floor" type="StaticBody3D" parent="." unique_id=1602424733]
physics_material_override = ExtResource("5_vwoi2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor" unique_id=1514362972]
shape = SubResource("ConcavePolygonShape3D_hynmq")

[node name="floorMesh" type="MeshInstance3D" parent="floor" unique_id=861146746]
material_override = ExtResource("1_hynmq")
mesh = SubResource("PlaneMesh_mfk22")
skeleton = NodePath("../..")

[node name="rightLight" type="OmniLight3D" parent="." unique_id=1295362232]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6591065, 28.340899, 6.0000076)
light_energy = 8.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 100.0
omni_attenuation = 2.0

[node name="leftLight" type="OmniLight3D" parent="." unique_id=1270830107]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6591063, 28.340899, -5.9999914)
light_energy = 8.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 100.0
omni_attenuation = 2.0

[node name="centerLight" type="OmniLight3D" parent="." unique_id=1447233112]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6591063, 28.340899, 8.583069e-06)
light_energy = 8.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 100.0
omni_attenuation = 2.0
